[package]
name = "clog"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.86"
cln-plugin = "0.1.8"
cln-rpc = "0.1.8"
log = "0.4.21"
moka = { version = "0.12.7", features = ["sync"] }
serde = "1.0.202"
serde_json = "1.0.117"
tokio = "1.37.0"

[build-dependencies]
built = { version = "0.7.2", features = ["git2"] }
