[package]
name = "clog"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[profile.release]
strip = true
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.100"
cln-plugin = "0.4.0"
cln-rpc = "0.4.0"
diesel = { version = "2.3.2", features = ["r2d2", "postgres", "chrono"] }
diesel_migrations = "2.3.0"
log = "0.4.28"
moka = { version = "0.12.11", features = ["sync"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", default-features = false, features = [
    "rt-multi-thread",
] }

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }
